[gd_scene load_steps=5 format=3 uid="uid://c6y2o53r1pqof"]

[ext_resource type="Script" uid="uid://b78kiplxbyuy7" path="res://scenes/computer_info/computer_info.gd" id="1_k4v6y"]
[ext_resource type="PackedScene" uid="uid://bgsmsqcvmqhfd" path="res://scenes/computer_info/file_system/file_system.tscn" id="2_2n1q8"]
[ext_resource type="PackedScene" uid="uid://bht5hvgy44bit" path="res://scenes/computer_info/config_os/config_os.tscn" id="3_2hcq2"]
[ext_resource type="PackedScene" uid="uid://fyrqtw0borya" path="res://scenes/computer_info/computer_users/computer_users.tscn" id="4_ewnup"]

[node name="ComputerInfo" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_k4v6y")
metadata/_tab_index = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="ComputerSelectorList" type="Tree" parent="HBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="ComputerDetailContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ComputerDetailContainer"]
layout_mode = 2
text = "Computer ID:"

[node name="ComputerIdLineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ComputerDetailContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="FlagsContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="IsRouterCheckBox" type="CheckBox" parent="HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/FlagsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Is Router?"

[node name="IsPlayerCheckBox" type="CheckBox" parent="HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/FlagsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Is Player?"

[node name="IsRentedCheckBox" type="CheckBox" parent="HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/FlagsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Is Rented?"

[node name="IsCtfCheckBox" type="CheckBox" parent="HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/FlagsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Is CTF?"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 1

[node name="ConfigOS" parent="HBoxContainer/VBoxContainer/TabContainer" instance=ExtResource("3_2hcq2")]
unique_name_in_owner = true
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="FileSystem" parent="HBoxContainer/VBoxContainer/TabContainer" instance=ExtResource("2_2n1q8")]
unique_name_in_owner = true
layout_mode = 2
metadata/_tab_index = 1

[node name="Hardware" type="MarginContainer" parent="HBoxContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="ComputerUsers" parent="HBoxContainer/VBoxContainer/TabContainer" instance=ExtResource("4_ewnup")]
unique_name_in_owner = true
visible = false
layout_mode = 2
